# Samurai

./: .gitignore  API_REFERENCE.md  Dockerfile  Dockerfile.cpp_builder  Dockerfile.robot  FIRST_RUN.md  README.md  build_cpp_for_pi.sh  calibration_profiles.yaml  config.yaml  config_loader.py  find_led_pin.py  hardware_presets.py  package-lock.json  package.json  requirements.txt  start_detector.sh  start_gpu_laptop.sh  start_laptop_robot.sh  start_laptop_sim.sh  start_robot.sh  start_robot_mqtt.sh  test_detection.py  test_leds.py  test_servos.py
Diagnostic/: DIAGNOSTIC_README.md  diagnostic.py  diagnostic_requirements.txt  log.txt  setup_robot.sh
ModelData/16.02/: DiagnosticLog.txt  DiagnosticReport.md
android_app/: build.gradle.kts  gradle.properties  settings.gradle.kts
android_app/app/: build.gradle.kts
compute_node/: dashboard_node.py  depth_to_scan_node.py  geofence_map_publisher.py  mqtt_bridge_compute.py  object_detector_node.py  simulator.py  test_yolo_webcam.py  yolo_detector_mqtt.py  yolo_detector_node.py
compute_node/frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
compute_node/static/: index.html
compute_node/templates/: admin.html  dashboard.html
docs/: samurai_technical_report.tex  usb-connect-windows.md
hardware_presets/: samurai_default.yaml
latex_doc/: main.aux  main.out  main.tex  main.toc
latex_doc/chapters/: 00_theory.aux  00_theory.tex  01_velocity_ekf.aux  01_velocity_ekf.tex  02_imu_ekf.aux  02_imu_ekf.tex  03_accel_position.aux  03_accel_position.tex  04_pure_pursuit.aux  04_pure_pursuit.tex  05_slam_map.aux  05_slam_map.tex  06_odometry.aux  06_odometry.tex  07_quaternions.aux  07_quaternions.tex  08_imu_calibration.aux  08_imu_calibration.tex  09_pathfinding.aux  09_pathfinding.tex  10_simulator.aux  10_simulator.tex  11_follow_me.aux  11_follow_me.tex  12_patrol.aux  12_patrol.tex  13_geofence_sensors.aux  13_geofence_sensors.tex  14_pwm_motor.aux  (+1 more)
pi_nodes/: __init__.py  calibration_profiles.py  mqtt_node.py  robot_launcher.py
ros_ws/src/robot_pkg/: package.xml  setup.cfg  setup.py
ros_ws/src/robot_pkg/config/: cartographer.lua  nav2_params.yaml  robot_localization.yaml  samurai.rviz  slam_toolbox_params.yaml
ros_ws/src/robot_pkg/launch/: compute_bringup.launch.py  robot_bringup.launch.py
ros_ws/src/robot_pkg/msg/: BallDetection.msg
ros_ws/src/robot_pkg/robot_pkg/: battery_node.py  camera_node.py  dashboard_node.py  depth_to_scan_node.py  fallback_nav_node.py  follow_me_node.py  fsm_node.py  gesture_node.py  imu_node.py  laser_node.py  map_manager_node.py  motor_node.py  mqtt_bridge_compute.py  mqtt_bridge_node.py  path_recorder_node.py  patrol_node.py  qr_detector_node.py  servo_node.py  temperature_node.py  ultrasonic_node.py  voice_node.py  watchdog_node.py  yolo_detector_node.py
ros_ws/src/robot_pkg/robot_pkg/hardware/: motor_driver.py  pca9685_driver.py  servo_driver.py
ros_ws/src/robot_pkg_cpp/: CMakeLists.txt  package.xml
ros_ws/src/robot_pkg_cpp/src/: imu_node.cpp  motor_node.cpp
tests/: test_led_driver.py  test_odom_debug.py  test_precision_drive.py
tools/: camera_and_range.py  mqtt_diagnostic.py  view_detections.py
(+173 files in other folders)
