<?xml version="1.0"?>
<package format="3">
  <name>robot_pkg_cpp</name>
  <version>1.0.0</version>
  <description>C++ real-time nodes for Samurai robot (motor + IMU)</description>
  <maintainer email="samurai@robot.local">Samurai Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
